[package]
name = "frames-info"
description = "Print information on matroska frames"
version = "0.0.1"
authors = ["Luni-4 <luni-4@hotmail.it>"]
license = "MIT"
repository = "https://github.com/rust-av/examples"
edition = "2018"

[[bin]]
name="frames_info"
path = "src/frames_info.rs"

[dependencies]
av-codec = "^0.2"
av-data = "^0.3"
av-format = "^0.3"
clap = "3.1.14"
matroska = { version = "0.1.0", git = "https://github.com/rust-av/matroska" }
av-vorbis = { git = "https://github.com/rust-av/av-vorbis" }
libopus = { version = "0.1.0", git = "https://github.com/rust-av/opus-rs", features = ["codec-trait"] }
libvpx = { version = "0.1.0", git = "https://github.com/rust-av/vpx-rs", features = ["codec-trait"] }
